# cmake_cpptk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/config/: package-config.cmake.in  uninstall.cmake.in
include/cmake_cpptk/: cmake.hpp  ctest.hpp  version.hpp.in
include/cmakecc/: cmake.hpp  cmakecc.hpp  ctest.hpp  version.hpp.in
test/: CMakeLists.txt  package_cmake_workflow_tests.cpp  project_version_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
